--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
 
   <title>React App</title>
   <style>
+
+    #root{
+
+      background-color: rgb(12, 5, 52);
+      height: 100vh;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
     .card-img-top {
       height: 150px;
       object-fit: cover;
